--- a/app/views/docs/sdks.phtml
+++ b/app/views/docs/sdks.phtml
@@ -1,8 +1,15 @@
 <?php
+use League\CommonMark\Environment\Environment;
+use League\CommonMark\Extension\CommonMark\CommonMarkCoreExtension;
+use League\CommonMark\Extension\GithubFlavoredMarkdownExtension;
+use League\CommonMark\MarkdownConverter;
 
-$platforms = $this->getParam('platforms', []);
-$markdown = new \Parsedown();
-$markdown->setSafeMode(true);
+$environment = new Environment(['html_input' => 'escape']);
+
+$environment->addExtension(new CommonMarkCoreExtension());
+$environment->addExtension(new GithubFlavoredMarkdownExtension());
+
+$markdown = new MarkdownConverter($environment);
 
 ?>
 
@@ -23,7 +30,7 @@ $markdown->setSafeMode(true);
     <?php if(!$platform['enabled']) { continue; } ?>
     <h2 href="/docs/sdks#<?php echo strtolower($platform['name']); ?>" id="<?php echo strtolower($platform['name']); ?>"><?php echo $platform['name']; ?> SDKs<?php if($platform['beta']): ?> (beta)<?php endif; ?></h2>
 
-    <p><?php echo $markdown->text($platform['description']); ?></p>
+    <p><?php echo $markdown->convert($platform['description']); ?></p>
 
     <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large text-size-small vertical">
         <thead>
