--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -1,4 +1,9 @@
 <?php
+use League\CommonMark\Environment\Environment;
+use League\CommonMark\Extension\CommonMark\CommonMarkCoreExtension;
+use League\CommonMark\Extension\GithubFlavoredMarkdownExtension;
+use League\CommonMark\MarkdownConverter;
+
 $serviceName    = $this->getParam('name', '');
 $service        = $this->getParam('service', []);
 $blacklist      = $this->getParam('blacklist', []);
@@ -32,8 +37,12 @@ $codes          = [
     ],
 ];
 
-$markdown = new \Parsedown();
-$markdown->setSafeMode(true);
+$environment = new Environment(['html_input' => 'escape']);
+
+$environment->addExtension(new CommonMarkCoreExtension());
+$environment->addExtension(new GithubFlavoredMarkdownExtension());
+
+$markdown = new MarkdownConverter($environment);
 
 $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
 ?>
@@ -198,7 +207,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
             <div class="col span-8 margin-bottom">
 
                 <div class="content margin-end-xl">
-                    <?php echo $markdown->text(file_get_contents($path)); ?>
+                    <?php echo $markdown->convert(file_get_contents($path)); ?>
 
                     <div class="clear">
                         <a href="https://github.com/appwrite/appwrite/edit/master<?php echo $description; ?>" class="pull-end text-size-small" target="_blank">Edit on GitHub <i class="icon-github-circled"></i></a>
@@ -302,7 +311,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                         </div>
 
                         <?php if(!empty($description)): ?>
-                            <?php echo $markdown->text($description); ?>
+                            <?php echo $markdown->convert($description); ?>
                         <?php endif; ?>
 
                         <div class="clear">
@@ -408,7 +417,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                                         <?php endif; ?>
                                     </td>
                                     <td data-title="Type: "><?php echo $this->escape($type); ?></td>
-                                    <td data-title="<?php echo (!empty($description)) ? 'Description: ' : ''; ?>"><?php echo $markdown->text($description); ?></td>
+                                    <td data-title="<?php echo (!empty($description)) ? 'Description: ' : ''; ?>"><?php echo $markdown->convert($description); ?></td>
                                 </tr>
                             <?php endforeach; ?>
                             </tbody>
