Remove unnecessary imports

--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -404,8 +404,7 @@ promise.then(function (response) {
         <h3>PHP</h3>
 
         <div class="ide margin-top-small" data-lang="php" data-lang-label="PHP SDK">
-            <pre class="line-numbers"><code class="prism language-php" data-prism>use Appwrite\Client;
-use Appwrite\ID;
+            <pre class="line-numbers"><code class="prism language-php" data-prism>use Appwrite\ID;
 use Appwrite\Services\Users;
                 
 $users = new Users($client);
@@ -422,8 +421,7 @@ $user = $users->create(
     <li>
         <h3>Python</h3>
         <div class="ide margin-top-small" data-lang="python" data-lang-label="Python SDK">
-            <pre class="line-numbers"><code class="prism language-python" data-prism>from appwrite.client import Client
-from appwrite.id import ID
+            <pre class="line-numbers"><code class="prism language-python" data-prism>from appwrite.id import ID
 from appwrite.services.users import Users
 
 users = Users(client)
@@ -454,7 +452,7 @@ user = users.create(
     <li>
         <h3>Deno</h3>
         <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Deno SDK">
-            <pre class="line-numbers"><code class="prism language-typescript" data-prism>import { Client, ID, Users } from "https://deno.land/x/appwrite/mod.ts";
+            <pre class="line-numbers"><code class="prism language-typescript" data-prism>import { ID, Users } from "https://deno.land/x/appwrite/mod.ts";
                 
 const users = new Users(client);
 
@@ -490,8 +488,7 @@ final user = await users.create(
     <li>
         <h3>Kotlin</h3>
         <div class="ide margin-top-small" data-lang="kotlin" data-lang-label="Kotlin SDK">
-            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
-import io.appwrite.ID
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.ID
 import io.appwrite.services.Users
 
 val users = Users(client)
