More suggestions from Grammarly

--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -1,4 +1,4 @@
-<p>Appwrite is a self-hosted backend server packaged as a set of Docker containers. You can install and run Appwrite on any operating system that can run a <a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Docker CLI</a>. You can use Appwrite on your local desktop or cloud provider of your choice.</p>
+<p>Appwrite is a self-hosted backend server packaged as a set of Docker containers. You can install and run Appwrite on any operating system that can run a <a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Docker CLI</a>. You can develop with Appwrite on your local desktop or a cloud provider of your choice.</p>
 
 <h2><a href="/docs/installation#systemRequirements" id="systemRequirements">System Requirements</a></h2>
 
