docs: typo in database.phtml

--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -541,7 +541,7 @@ func main() async throws {
         </tr>
         <tr>
             <td>unique</td>
-            <td>Unique Index which not allows duplicates.</td>
+            <td>Unique Index to disallow duplicates.</td>
         </tr>
         <tr>
             <td>fulltext</td>
