updated timestamp format to ISO in realtime payload

--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -405,10 +405,10 @@ subscription.close()</code></pre>
                 timestamp
             </td>
             <td data-title="Type: ">
-                integer
+                string
             </td>
             <td data-title="Description: ">
-                The <a href="https://en.wikipedia.org/wiki/Unix_time" rel="noopener" target="_blank">UNIX timestamp</a> from the server to ensure consistency across all client platforms and real-time technologies.
+                The <a href="https://en.wikipedia.org/wiki/ISO_8601" rel="noopener" target="_blank">ISO 8601</a> from the server to ensure consistency across all client platforms and real-time technologies.
             </td>
         </tr>
         <tr>
@@ -448,7 +448,7 @@ subscription.close()</code></pre>
         "collections.user.documents",
         "collections.user.documents.627a95c0785cc5c7fff2"
     ],
-    "timestamp": 1653957271,
+    "timestamp": "2022-10-17T07:29:37+00:00",
     "payload": {
         "field1": "lorem ipsum",
         "field2": [],
