--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -46,10 +46,10 @@
         <h4>PowerShell</h4>
 
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="PowerShell">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>docker run -it --rm ,
-    --volume /var/run/docker.sock:/var/run/docker.sock ,
-    --volume ${pwd}/appwrite:/usr/src/code/appwrite:rw ,
-    --entrypoint="install" ,
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>docker run -it --rm `
+    --volume /var/run/docker.sock:/var/run/docker.sock `
+    --volume ${pwd}/appwrite:/usr/src/code/appwrite:rw `
+    --entrypoint="install" `
     appwrite/appwrite:<?php echo APP_VERSION_STABLE; ?></code></pre>
         </div>
     </li>
