Updated timestamp description
Updated timestamp description to let user know that timestamp is in UTC timezone ISO format.

--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -408,7 +408,7 @@ subscription.close()</code></pre>
                 string
             </td>
             <td data-title="Description: ">
-                The <a href="https://en.wikipedia.org/wiki/ISO_8601" rel="noopener" target="_blank">ISO 8601</a> from the server to ensure consistency across all client platforms and real-time technologies.
+                The <a href="https://en.wikipedia.org/wiki/ISO_8601" rel="noopener" target="_blank">ISO 8601</a> in UTC timezone from the server to ensure consistency across all client platforms and real-time technologies.
             </td>
         </tr>
         <tr>
