docs: update windows powershell commands

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -467,10 +467,10 @@ static RuntimeResponse &main(const RuntimeRequest &req, RuntimeResponse &res) {
         <h3>PowerShell</h3>
 
         <div class="ide margin-bottom" data-lang="bash" data-lang-label="PowerShell">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment ,
-    --functionId=6012cc93d5a7b ,
-    --activate=true ,
-    --entrypoint="index.js" ,
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment `
+    --functionId=6012cc93d5a7b `
+    --activate=true `
+    --entrypoint="index.js" `
     --code="."</code></pre>
         </div>
     </li>
