--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -7,7 +7,7 @@
 <h2><a href="/docs/authentication#account-vs-user-api" id="account-vs-user-api">Account vs Users API</a></h2>
 
 <p>
-    The Account API operates in the scope of the currently logged-in account and is usually used in a frontend or mobile app. The Users API is used in backend integrations and operates in an admin scope using an API key with access to all your project users.
+    The Account API operates in the scope of the currently logged-in account and is usually used in a frontend or mobile app. The Users API is used in backend integrations and uses an API key with access to all your project users.
 </p>
 
 <p> 
