--- a/app/views/docs/admin.phtml
+++ b/app/views/docs/admin.phtml
@@ -2,13 +2,8 @@
 
 <p>When building client integrations with the Client SDKs, you authenticate with an account and operate in the scope of the account. This means Client SDKs can only access resources that your account has been granted permission to access.</p>
 
-<a href="/docs/permissions"><i class="icon-angle-circled-right"></i>Learn more about permissions</a>
+<p><a href="/docs/permissions"><i class="icon-angle-circled-right"></i>Learn more about permissions</a></p>
 
 <p>When building server integrations with the Server SDKs, you operate in the scope of an API key instead of an account. API keys are created with scopes that specify the type of resources they can access and the type of operations they can perform on those resources. API keys bypass permissions and can access all resources belonging to any account.</p>
 
-<a href="/docs/keys"><i class="icon-angle-circled-right"></i>Learn more about API keys</a>
-
-<div class="notice">
-  <h2>Best Practice</h2>
-  <p>Never use Server SDKs on client applications. Doing so is a major security risk.</p>
-</div>
+<p><a href="/docs/keys"><i class="icon-angle-circled-right"></i>Learn more about API keys</a></p>
