Apply suggestions with grammarly

--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -217,7 +217,7 @@ let client = Client()
 
 <div class="notice">
     <h3>API Key Authentication</h3>
-    <p>When using Server SDKs, you authenticate with API keys. API keys are not restricted by account-based permissions but have restrictions to types of resources that can be accessed. This means API keys can access all resources of specified types, regardless of which account can access them.</p>
+    <p>When using Server SDKs, you authenticate with API keys. API keys are not restricted by account-based permissions but have restrictions on the types of resources that can be accessed. This means API keys can access all resources of specified types, regardless of which account can access them.</p>
 
     <p><a href="/docs/keys">Learn more about API keys</a></p>
 </div>
