Updates REST API category to References

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -51,7 +51,7 @@ $cols = [
                 </ul>
 
                 <div class="margin-bottom-small">
-                    <b class="text-size-small">REST API</b>
+                    <b class="text-size-small">References</b>
                 </div>
 
                 <ul class="margin-bottom">
