Add APIs category for rest/graphql/realtime

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -51,6 +51,16 @@ $cols = [
                 </ul>
 
                 <div class="margin-bottom-small">
+                    <b class="text-size-small">APIs</b>
+                </div>
+
+                <ul class="margin-bottom">
+                    <li><a href="/docs/rest">REST</a></li>
+                    <li><a href="/docs/graphql">GraphQL</a></li>
+                    <li><a href="/docs/realtime">Realtime</a></li>
+                </ul>
+
+                <div class="margin-bottom-small">
                     <b class="text-size-small">References</b>
                 </div>
 
@@ -75,8 +85,6 @@ $cols = [
                     <li><a href="/docs/storage">Storage</a></li>
                     <li><a href="/docs/authentication">Authentication</a></li>
                     <li><a href="/docs/functions">Functions</a></li>
-                    <li><a href="/docs/realtime">Realtime</a></li>
-                    <li><a href="/docs/graphql">GraphQL</a></li>
                 </ul>
 
                 <div class="margin-bottom-small">
