--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -16,6 +16,7 @@ $channels = [
     'functions.[ID]' => 'Any execution event to a given function'
 ];
 ?>
+<p>Appwrite supports multiple protocols for accessing the server, including <a href="/docs/rest">REST</a>, <a href="/docs/graphql">GraphQL</a>, and <a href="/docs/realtime">Realtime</a>.</p>
 
 <p>Realtime allows you to listen to any events on the server-side in realtime using the <b>subscribe</b> method.</p>
 
