--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -122,6 +122,9 @@ let subscription = realtime.subscribe(channels: ["files"]) { response in
     <p>Using <span class="tag">Role.any()</span> on read permissions will allow any client to receive updates.</p>
 </div>
 
+<h2><a href="/docs/realtime#authentication" id="authentication">Authentication</a></h2>
+<p>Realtime authenticates using an existing user session. If you authenticate <i>after</i> creating a subscription, the subscription will not receive updates for the newly authenticated user. You will need to re-create the subscription so that it will work with the new user.</p>
+
 <h2><a href="/docs/realtime#examples" id="examples">Examples</a></h2>
 <p>The examples below will show you how you can use Realtime in various ways.</p>
 
@@ -525,9 +528,6 @@ client.setEndpointRealtime("[HOSTNAME_OR_IP]")</code></pre>
 </ul>
 
 <h2><a href="/docs/realtime#known-limitations" id="known-limitations">Known Limitations</a></h2>
-
-<h3>Authentication with Existing Subscription</h3>
-<p>If you authenticate a user and have an already existing subscription, the subscription will not receive updates for the newly authenticated user. You would need to re-create the subscription so that it will work with the new user.</p>
 
 <h3>Rapid Subscriptions Changes</h3>
 <p>The SDK creates a single WebSocket connection for all subscribed channels. Each time a channel is added or unsubscribed - the SDK currently creates a completely new connection and terminates the old one. Therefore, subscriptions to channels should always be done in conjunction with state management so as not to be unnecessarily built up several times by multiple components' life cycles.</p>
