--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -125,6 +125,8 @@ let subscription = realtime.subscribe(channels: ["files"]) { response in
 <h2><a href="/docs/realtime#authentication" id="authentication">Authentication</a></h2>
 <p>Realtime authenticates using an existing user session. If you authenticate <i>after</i> creating a subscription, the subscription will not receive updates for the newly authenticated user. You will need to re-create the subscription so that it will work with the new user.</p>
 
+<p>More information on authenticating users can be found in the dedicated <a href="/docs/authentication">authentication guide</a>.</p>
+
 <h2><a href="/docs/realtime#examples" id="examples">Examples</a></h2>
 <p>The examples below will show you how you can use Realtime in various ways.</p>
 
